# automl

./: .gitignore  LICENSE  README.md  deploy_env_to_hatch.py  pyproject.toml  st_eda.py  streamlit.py
src/automl/: eda_crew.py  eda_flow.py  main.py  st_eda_interface.py  streamlit_interface.py  zero_shot_crew.py
src/automl/config/: agents.yaml  eda_tasks.yaml  future_tasks.yaml  zero_shot_tasks.yaml
src/automl/templates/: skeleton_python_script.txt
src/automl/tools/: __init__.py  arxiv_search_tool.py  csv_preview_tool.py  data_visualization_tool.py  file_executor_tool.py  file_operation_tool.py  hitl_tool.py  hugging_face_search_tool.py  kaggle_metadata_extractor_tool.py  kaggle_submission_tool.py  papers_with_code_search_tool.py  pwd_tool.py  yada_download_tool.py  ydata_profiler_tool.py  ydata_profiling_tool.py
src/kaggle_automl/: crew.py  few_shot_crew.py  main.py  zero_shot_crew.py
src/kaggle_automl/agents/: __init__.py  dataset_acquisition_specialist.py  reporting_analyst.py  researcher.py
src/kaggle_automl/config/: agents.yaml  few_shot_tasks.yaml  tasks.yaml  zero_shot_tasks.yaml
src/kaggle_automl/outputs/: code.py
src/kaggle_automl/tasks/: __init__.py  dataset_acquisition.py  reporting.py  research.py
src/kaggle_automl/templates/: skeleton_python_script.txt
src/kaggle_automl/tools/: __init__.py  directory_read_tool.py  hugging_face_search_tool.py  kaggle_download_tool.py  kaggle_reference_extractor_tool.py  kaggle_search_tool.py
src/kaggle_automl/utils/: __init__.py  loader.py
