[project]
name = "kaggle_automl"
version = "0.1.0"
description = "kaggle-automl using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
kaggle_automl = "kaggle_automl.main:run"
run_crew = "kaggle_automl.main:run"
train = "kaggle_automl.main:train"
replay = "kaggle_automl.main:replay"
test = "kaggle_automl.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
